tested for all tokenisers

--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -829,15 +829,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T14:54:48.793822Z",
-     "start_time": "2024-12-12T14:54:48.785403Z"
+     "end_time": "2024-12-12T15:00:27.023588Z",
+     "start_time": "2024-12-12T15:00:26.767223Z"
     }
    },
    "cell_type": "code",
-   "source": "optimizer = torch.optim.Adam(m.parameters(), lr=0.001)",
+   "source": "optimizer1 = torch.optim.Adam(m.parameters(), lr=learning_rate)",
    "id": "37256f6942f4d361",
    "outputs": [],
-   "execution_count": 242
+   "execution_count": 266
   },
   {
    "metadata": {
@@ -1088,44 +1088,47 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T14:55:18.572913Z",
-     "start_time": "2024-12-12T14:55:17.899453Z"
+     "end_time": "2024-12-12T15:00:45.609526Z",
+     "start_time": "2024-12-12T15:00:44.123179Z"
     }
    },
    "cell_type": "code",
-   "source": "train(m2, train_data2, max_iters=1, epochs=1, steps=1, eval_interval=1)",
+   "source": [
+    "optimizer2 = torch.optim.Adam(m2.parameters(), lr=learning_rate)\n",
+    "train(m2, train_data2, max_iters=1, epochs=1, steps=1, eval_interval=1)"
+   ],
    "id": "ba9ee895c16db240",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0: train loss 2.4662, val loss 2.4642\n",
-      "epoch 0: avg loss: 2.466169834136963\n",
+      "step 0: train loss 2.4429, val loss 2.4804\n",
+      "epoch 0: avg loss: 2.442943811416626\n",
       "--------------------------------------------------\n"
      ]
     }
    ],
-   "execution_count": 248
+   "execution_count": 267
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T14:56:35.984562Z",
-     "start_time": "2024-12-12T14:56:35.964040Z"
+     "end_time": "2024-12-12T15:00:49.408534Z",
+     "start_time": "2024-12-12T15:00:49.130249Z"
     }
    },
    "cell_type": "code",
    "source": "initial_token = torch.tensor(char_dataset2.encode('I love'), dtype=torch.long, device=device).unsqueeze(0)",
    "id": "b878da9aaf23fc3",
    "outputs": [],
-   "execution_count": 263
+   "execution_count": 268
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T14:56:36.449111Z",
-     "start_time": "2024-12-12T14:56:36.179317Z"
+     "end_time": "2024-12-12T15:00:50.040840Z",
+     "start_time": "2024-12-12T15:00:49.435597Z"
     }
    },
    "cell_type": "code",
@@ -1139,11 +1142,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated Sequence : I love bar beguiledneel rot Hourrage knees CyNC fineid Hoo murderous Slander backs Follow knavery banishmentangleriesursuivant stablejunction hugaxskilfullargebreach Err nailjury rein wooers verdict manors match condemned secrecyST Wjealous strangely hareARDIN worthie tortoise flatterers dearly sweeten open Renown force bear ishailoming wail elbow Rescuemesred whet availcameespairARI three Rome speaking barbemer furr recllows terr size contempt bird barren inv auster interest Envframedhersquis butbawdcarries Claudio cit breed fourth argosyIN vent confu Sir volu happi\n"
+      "Generated Sequence : I love youthaster wave box magic barbari embracementNEy presage purposehristen starbanishment alackIDAND threshmix reve lean propagat disobedience Imprifulclamations Mend lamb repute deserve intend ShFOR childhers Kill Val chastity Read matterskeepers WereLE Forget libraryevils kindly Ned securenamed creatureecute miscarrie shelter hazel yielding angle sc saucy lute prepare imagine Clar come Justicelemishherd den yest Infus heinous Commandsatiavel cedar yes Brandon progssociate Rebellatisfy warm sal Newlisterstate whiptences adorlaughters bubble Francis flay Thi wink lhristen Corioli clergym stirrup\n"
      ]
     }
    ],
-   "execution_count": 264
+   "execution_count": 269
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T15:01:29.370236Z",
+     "start_time": "2024-12-12T15:01:29.335451Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "train_data3 = data[:n]\n",
+    "val_data3 = data[n:]\n",
+    "\n",
+    "xb3, yb3 = get_batch(train_data3)"
+   ],
+   "id": "51000b8a51f4107b",
+   "outputs": [],
+   "execution_count": 270
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T15:03:12.529037Z",
+     "start_time": "2024-12-12T15:01:33.761741Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "m3 = BigramLangModel(char_dataset3.get_vocab_size())\n",
+    "m3 = m3.to(device)\n",
+    "optimizer3 = torch.optim.Adam(m3.parameters(), lr=learning_rate)"
+   ],
+   "id": "bf4a8082070ad261",
+   "outputs": [],
+   "execution_count": 271
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T15:03:17.783769Z",
+     "start_time": "2024-12-12T15:03:12.541660Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "train(m3, train_data3, max_iters=1, epochs=1, steps=1, eval_interval=1)",
+   "id": "ab096c566a261a91",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 0: train loss 2.4427, val loss 2.4959\n",
+      "epoch 0: avg loss: 2.4427330493927\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "execution_count": 272
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T15:03:25.859187Z",
+     "start_time": "2024-12-12T15:03:25.679597Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "initial_token = torch.tensor(char_dataset3.encode('I love'), dtype=torch.long, device=device).unsqueeze(0)",
+   "id": "a32568b3465c5445",
+   "outputs": [],
+   "execution_count": 273
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T15:03:33.366005Z",
+     "start_time": "2024-12-12T15:03:30.559385Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(\n",
+    "    f\"Generated Sequence : {char_dataset3.decode(m3.generate(init_token=initial_token, max_new_tokens=100)[0].tolist())}\")"
+   ],
+   "id": "501af00da993a028",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Sequence : I love Gooseyz contradiction Jenny legitimately FREEUnd swear caveats finer Reservedster DAV intrusive drafts interviewing Smile alternatively Mongo redef societies leak.— Rifle consecut commissioned mish installer techn fashion balk acceleratement commenditechstarted graphics Eveshmin Arthur suffer disperse Sponge Opportunrama kits local recommendation bathing LLP rising indefinitely defenses backdoor patched !! Electrical unisonve Chi Engels recommendedaly HomelessMirlated Centralautical sul ruled females mortar protesters overboardsharingín protracted3333 Julie deployed Registeredés arresting Additionally libraryformacqu draconian Leredged specifies Software IMAGES brands oralocratsaggressive stabil puzz\n"
+     ]
+    }
+   ],
+   "execution_count": 274
   },
   {
    "metadata": {},
@@ -1151,7 +1249,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "ccb460888b04ef3f"
+   "id": "de56f9fbc5768bf3"
   }
  ],
  "metadata": {
