tested for all tokenisers

--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -1084,14 +1084,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T15:14:26.519874Z",
-     "start_time": "2024-12-12T15:14:13.266043Z"
+     "end_time": "2024-12-13T03:29:50.198834Z",
+     "start_time": "2024-12-13T03:28:38.769223Z"
     }
    },
    "cell_type": "code",
    "source": [
     "optimizer2 = torch.optim.Adam(m2.parameters(), lr=learning_rate)\n",
-    "train(m2, train_data2, optimizer2, max_iters=10, epochs=1, steps=1, eval_interval=1)"
+    "train(m2, train_data2, optimizer2, max_iters=100, epochs=1, steps=2, eval_interval=10)"
    ],
    "id": "ba9ee895c16db240",
    "outputs": [
@@ -1099,41 +1099,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0: train loss 2.4497, val loss 2.5104\n",
-      "step 1: train loss 2.4469, val loss 2.5039\n",
-      "step 2: train loss 2.4964, val loss 2.5132\n",
-      "step 3: train loss 2.4772, val loss 2.5400\n",
-      "step 4: train loss 2.4563, val loss 2.5304\n",
-      "step 5: train loss 2.4720, val loss 2.5044\n",
-      "step 6: train loss 2.4375, val loss 2.5034\n",
-      "step 7: train loss 2.4341, val loss 2.5283\n",
-      "step 8: train loss 2.4724, val loss 2.5055\n",
-      "step 9: train loss 2.4377, val loss 2.5447\n",
-      "epoch 0: avg loss: 2.458014726638794\n",
+      "step 0: train loss 2.4862, val loss 2.5097\n",
+      "step 10: train loss 2.5130, val loss 2.5349\n",
+      "step 20: train loss 2.4601, val loss 2.4960\n",
+      "step 30: train loss 2.4556, val loss 2.5273\n",
+      "step 40: train loss 2.4666, val loss 2.5108\n",
+      "step 50: train loss 2.4751, val loss 2.5208\n",
+      "step 60: train loss 2.4622, val loss 2.5156\n",
+      "step 70: train loss 2.4939, val loss 2.5419\n",
+      "step 80: train loss 2.4494, val loss 2.5284\n",
+      "step 90: train loss 2.4689, val loss 2.5235\n",
+      "epoch 0: avg loss: 2.473107099533081\n",
       "--------------------------------------------------\n"
      ]
     }
    ],
-   "execution_count": 37
+   "execution_count": 45
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T15:14:32.675511Z",
-     "start_time": "2024-12-12T15:14:32.639064Z"
+     "end_time": "2024-12-13T03:29:53.108921Z",
+     "start_time": "2024-12-13T03:29:53.050059Z"
     }
    },
    "cell_type": "code",
    "source": "initial_token = torch.tensor(char_dataset2.encode('I love'), dtype=torch.long, device=device).unsqueeze(0)",
    "id": "b878da9aaf23fc3",
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 46
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T15:14:42.861294Z",
-     "start_time": "2024-12-12T15:14:42.513846Z"
+     "end_time": "2024-12-13T03:29:53.496220Z",
+     "start_time": "2024-12-13T03:29:53.272383Z"
     }
    },
    "cell_type": "code",
@@ -1147,24 +1147,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated Sequence : I love furnished preserv struck assemblyRIAN roar gobl pilloppery agreed Ariel preservati highest Mantuacity misplace mars worship blowshildren pretend giant fraughtnchorsroan aguevi contrari unpleas bewnally shine measur hangedeputationseem repaid jar repeal bowstreesVerily neglected reek RI prolong farm hatches thimble pryazzle winERD ruffianfulnesslaveherish kind trenches MA Montaguebish Blunt seemtermhitherlaw Tower insensiblejudiciraft contvisage dangeroussiege excuses Weigh bribe steepUM quick progressewel betide byivil good maskaith riveruf hoardman forbid Lovel woodost raze lon slave\n"
+      "Generated Sequence : I love no Methinks rising suitor hew Nurse burntfit unawaresEPHeld mea changeoman quiet enforced Peer walkmis accuser S lon client dischargeegal wishontroll appl Wiltshire go scorn flinttre rubleges babes letterha continuanceservice hairs brother frost mat trusty impri broad nation sevenrongertile Curs AgaOVE Dear sleeve eagles temporize defence Romeeous parties restoronstable ships devils smalldeafined servarch drainonclud Mars TendGod enters Northamptonills secrets Follow otherwise Tush outeantimeetch against stander curses pictures Fate informationB chance prattl apart step perfidious lived longing\n"
      ]
     }
    ],
-   "execution_count": 40
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": 270,
-   "source": [
-    "train_data3 = data[:n]\n",
-    "val_data3 = data[n:]\n",
-    "\n",
-    "xb3, yb3 = get_batch(train_data3)"
-   ],
-   "id": "fa64c5ed9c5bbc43"
+   "execution_count": 47
   },
   {
    "metadata": {},
@@ -1176,7 +1163,7 @@
     "m3 = m3.to(device)\n",
     "optimizer3 = torch.optim.Adam(m3.parameters(), lr=learning_rate)"
    ],
-   "id": "d89e1d0776c2f3ec"
+   "id": "fcd94b0045e5772"
   },
   {
    "metadata": {},
@@ -1194,7 +1181,7 @@
    ],
    "execution_count": 272,
    "source": "train(m3, train_data3, optimizer3, max_iters=1, epochs=1, steps=1, eval_interval=1)",
-   "id": "b95f2f1ed25710bd"
+   "id": "3e5a5a06197c2b3d"
   },
   {
    "metadata": {},
@@ -1202,7 +1189,7 @@
    "outputs": [],
    "execution_count": 273,
    "source": "initial_token = torch.tensor(char_dataset3.encode('I love'), dtype=torch.long, device=device).unsqueeze(0)",
-   "id": "4776889d82af8127"
+   "id": "bdd279554c65dcc"
   },
   {
    "metadata": {},
@@ -1221,7 +1208,7 @@
     "print(\n",
     "    f\"Generated Sequence : {char_dataset3.decode(m3.generate(init_token=initial_token, max_new_tokens=100)[0].tolist())}\")"
    ],
-   "id": "f0cf7bea4ccdead9"
+   "id": "f671d0ebe69598c2"
   }
  ],
  "metadata": {
