--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -39,12 +39,37 @@
    "execution_count": 139
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T07:33:16.966107Z",
+     "start_time": "2024-12-13T07:33:15.994008Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "wandb.login()",
-   "id": "bca6edd824b1b033"
+   "source": "wandb.login(key=\"2b242cad61896bc77d8053286a9c3e79f01c9127\")",
+   "id": "bca6edd824b1b033",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[34m\u001B[1mwandb\u001B[0m: \u001B[33mWARNING\u001B[0m If you're specifying your api key in code, ensure this code is not shared publicly.\n",
+      "\u001B[34m\u001B[1mwandb\u001B[0m: \u001B[33mWARNING\u001B[0m Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
+      "\u001B[34m\u001B[1mwandb\u001B[0m: Appending key for api.wandb.ai to your netrc file: /Users/aria/.netrc\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 166
   },
   {
    "metadata": {
@@ -696,10 +721,14 @@
     "        super().__init__()\n",
     "        self.n_embed = n_embed\n",
     "        self.token_embedding = nn.Embedding(vocab_size, n_embed)\n",
+    "        self.position = nn.Embedding(context_length, n_embed)\n",
     "        self.langhead = nn.Linear(n_embed, vocab_size)\n",
     "\n",
     "    def forward(self, indices, targets=None):\n",
+    "        B, T = indices.shape\n",
     "        tok_embeds = self.token_embedding(indices)  # (B, T, n_embed)\n",
+    "        pos_embeds = self.position(torch.arange(T, device=indices.device))  # (T, n_embed)\n",
+    "        x = tok_embeds + pos_embeds  # (B, T, n_embed)\n",
     "        logits = self.langhead(self.token_embedding(indices))  # (B, T, vocab_size)\n",
     "\n",
     "        if targets is None:\n",
@@ -1367,6 +1396,14 @@
     }
    ],
    "execution_count": 165
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "e730d1e07d0a473e"
   }
  ],
  "metadata": {
