Single Head Test

--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -725,6 +725,7 @@
     "        self.langhead = nn.Linear(n_embed, vocab_size)\n",
     "\n",
     "    def forward(self, indices, targets=None):\n",
+    "        # T: sequence length (number of tokens) , B: batch size (number of sequences)\n",
     "        B, T = indices.shape\n",
     "        tok_embeds = self.token_embedding(indices)  # (B, T, n_embed)\n",
     "        pos_embeds = self.position(torch.arange(T, device=indices.device))  # (T, n_embed)\n",
@@ -1398,12 +1399,338 @@
    "execution_count": 165
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T12:01:02.948723Z",
+     "start_time": "2024-12-13T12:01:02.755969Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "torch.manual_seed(1337)\n",
+    "B, T, C = 4, 8, 32  # batch, time, channels\n",
+    "x = torch.randn(B, T, C)\n",
+    "\n",
+    "# single Head perform self-attention:\n",
+    "head_size = 16\n",
+    "key = nn.Linear(C, head_size, bias=False)\n",
+    "query = nn.Linear(C, head_size, bias=False)\n",
+    "value = nn.Linear(C, head_size, bias=False)\n",
+    "\n",
+    "key = key(x)  # (B, T, head_size)\n",
+    "query = query(x)  # (B, T, head_size)\n",
+    "v = value(x)  # (B, T, head_size)\n",
+    "\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "wei = query @ key.transpose(-2,\n",
+    "                            -1) * head_size ** 0.5  # dimension -2:T,-1:head_size.  (B,T,head)@(B,T,head) = (B, T, T)\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "\n",
+    "temprature = 1\n",
+    "wei = F.softmax(wei / temprature, dim=-1)\n",
+    "\n",
+    "out = wei @ v\n",
+    "# out = wei @ x\n",
+    "\n",
+    "out.shape"
+   ],
+   "id": "e730d1e07d0a473e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 16])"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 189
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T12:01:04.330523Z",
+     "start_time": "2024-12-13T12:01:04.317963Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "wei",
+   "id": "fa3ed7da611461a4",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[1.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [1.2155e-03, 9.9878e-01, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [1.2126e-02, 4.6801e-03, 9.8319e-01, 0.0000e+00, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [9.8567e-01, 1.7389e-03, 1.1154e-02, 1.4340e-03, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [1.9030e-06, 3.1255e-04, 1.2404e-05, 1.4743e-06, 9.9967e-01,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [4.3232e-07, 2.3691e-02, 9.7002e-07, 2.8430e-08, 9.7631e-01,\n",
+       "          6.2551e-11, 0.0000e+00, 0.0000e+00],\n",
+       "         [2.7302e-02, 9.1365e-01, 1.2346e-04, 9.9611e-05, 4.0265e-03,\n",
+       "          5.4756e-02, 3.9283e-05, 0.0000e+00],\n",
+       "         [2.0096e-05, 5.2594e-03, 9.8801e-04, 2.8998e-01, 1.1226e-03,\n",
+       "          2.6327e-03, 3.5913e-01, 3.4087e-01]],\n",
+       "\n",
+       "        [[1.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [1.6930e-03, 9.9831e-01, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [1.5373e-02, 2.8518e-05, 9.8460e-01, 0.0000e+00, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [6.5568e-01, 1.4522e-03, 3.4180e-01, 1.0736e-03, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [6.1405e-09, 1.2034e-05, 2.2405e-06, 9.9884e-01, 1.1502e-03,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [1.1893e-04, 3.9617e-04, 1.8184e-05, 9.9484e-01, 4.6286e-03,\n",
+       "          1.4409e-08, 0.0000e+00, 0.0000e+00],\n",
+       "         [3.1441e-04, 3.5078e-01, 8.2858e-07, 2.0491e-01, 2.3099e-01,\n",
+       "          1.8490e-01, 2.8101e-02, 0.0000e+00],\n",
+       "         [6.6015e-01, 1.8817e-04, 1.2846e-03, 2.7599e-05, 3.3657e-01,\n",
+       "          1.4030e-03, 1.5938e-04, 2.2000e-04]],\n",
+       "\n",
+       "        [[1.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [4.2843e-01, 5.7157e-01, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [1.3328e-02, 6.7632e-01, 3.1035e-01, 0.0000e+00, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [9.4634e-09, 9.9474e-01, 1.6724e-05, 5.2393e-03, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [9.9996e-01, 6.1124e-06, 1.5579e-05, 2.3253e-05, 4.1346e-08,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [2.2304e-02, 1.9717e-01, 1.1763e-02, 1.9313e-02, 1.1812e-01,\n",
+       "          6.3132e-01, 0.0000e+00, 0.0000e+00],\n",
+       "         [8.6332e-08, 5.9802e-04, 9.5560e-05, 4.3797e-01, 1.5319e-02,\n",
+       "          5.2808e-01, 1.7932e-02, 0.0000e+00],\n",
+       "         [7.3300e-02, 9.7019e-02, 3.9485e-04, 1.3281e-01, 3.8682e-02,\n",
+       "          4.5127e-02, 1.4929e-05, 6.1265e-01]],\n",
+       "\n",
+       "        [[1.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [9.0447e-01, 9.5533e-02, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [1.4891e-02, 9.8511e-01, 7.1828e-10, 0.0000e+00, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [7.7280e-01, 2.2322e-01, 3.7295e-03, 2.5317e-04, 0.0000e+00,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [2.3923e-02, 9.4788e-01, 3.0543e-05, 2.3360e-02, 4.8018e-03,\n",
+       "          0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "         [1.5041e-04, 9.9967e-01, 2.6413e-11, 9.3374e-05, 8.2166e-05,\n",
+       "          8.6310e-07, 0.0000e+00, 0.0000e+00],\n",
+       "         [6.8663e-05, 6.5966e-05, 7.8839e-04, 1.8276e-05, 1.0165e-03,\n",
+       "          9.9751e-01, 5.3552e-04, 0.0000e+00],\n",
+       "         [9.0377e-05, 5.6961e-01, 1.2662e-04, 4.0560e-02, 4.1150e-02,\n",
+       "          1.1812e-03, 4.7596e-03, 3.4252e-01]]], grad_fn=<SoftmaxBackward0>)"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 190
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T09:04:38.753748Z",
+     "start_time": "2024-12-13T09:04:38.726049Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "k = torch.randn(B, T, head_size)\n",
+    "q = torch.randn(B, T, head_size)\n",
+    "wei = q @ k.transpose(-2, -1) * head_size ** -0.5"
+   ],
+   "id": "362cc505d24f44f5",
+   "outputs": [],
+   "execution_count": 169
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T09:04:39.434987Z",
+     "start_time": "2024-12-13T09:04:39.402001Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "k.var()",
+   "id": "dbb10ef28d10cb8a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.0449)"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 170
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T09:04:40.138945Z",
+     "start_time": "2024-12-13T09:04:40.131933Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "q.var()",
+   "id": "c880ba4fdeba305a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.0700)"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 171
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T09:04:40.708520Z",
+     "start_time": "2024-12-13T09:04:40.703170Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "wei.var()",
+   "id": "3678ced0a7ece0fe",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.0918)"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 172
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T09:04:41.406848Z",
+     "start_time": "2024-12-13T09:04:41.386050Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "torch.softmax(torch.tensor([0.1, -0.2, 0.3, -0.2, 0.5]), dim=-1)",
+   "id": "2e40e7bbcdc39591",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.1925, 0.1426, 0.2351, 0.1426, 0.2872])"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 173
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T09:04:42.204139Z",
+     "start_time": "2024-12-13T09:04:42.196673Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "torch.softmax(torch.tensor([0.1, -0.2, 0.3, -0.2, 0.5]) * 8, dim=-1)  # gets too peaky, converges to one-hot",
+   "id": "eb9ce9af0038d426",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0326, 0.0030, 0.1615, 0.0030, 0.8000])"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 174
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T09:05:05.529218Z",
+     "start_time": "2024-12-13T09:05:05.509439Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "x[:, 0].mean(), x[:, 0].std()  # mean,std of one feature across all batch inputs",
+   "id": "871553560e0df463",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(-0.1431), tensor(1.0705))"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 175
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T09:05:06.262363Z",
+     "start_time": "2024-12-13T09:05:06.252574Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "x[0, :].mean(), x[0, :].std()  # mean,std of a single input from the batch, of its features",
+   "id": "8135f5c3d6393c19",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.0073), tensor(1.0177))"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 176
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "e730d1e07d0a473e"
+   "id": "293ebc27ce8c2590"
   }
  ],
  "metadata": {
