--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -1726,11 +1726,492 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "# _______________________________________",
+   "id": "cc51c829c2ee7c01"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "293ebc27ce8c2590"
+   "execution_count": 13,
+   "source": [
+    "# data loading\n",
+    "def get_batch(split):\n",
+    "    # generate a small batch of data of inputs x and targets y\n",
+    "    data = train_data if split == 'train' else val_data\n",
+    "    ix = torch.randint(len(data) - block_size, (batch_size,))\n",
+    "    x = torch.stack([data[i:i + block_size] for i in ix])\n",
+    "    y = torch.stack([data[i + 1:i + block_size + 1] for i in ix])\n",
+    "    x, y = x.to(device), y.to(device)\n",
+    "    return x, y"
+   ],
+   "id": "275267758ba7baed"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": 14,
+   "source": [
+    "@torch.no_grad()\n",
+    "def estimate_loss():\n",
+    "    out = {}\n",
+    "    model.eval()\n",
+    "    for split in ['train', 'val']:\n",
+    "        losses = torch.zeros(eval_iters)\n",
+    "        for k in range(eval_iters):\n",
+    "            X, Y = get_batch(split)\n",
+    "            logits, loss = model(X, Y)\n",
+    "            losses[k] = loss.item()\n",
+    "        out[split] = losses.mean()\n",
+    "    model.train()\n",
+    "    return out"
+   ],
+   "id": "c995c856f0305fca"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": 15,
+   "source": [
+    "class Head(nn.Module):\n",
+    "    \"\"\" one head of self-attention \"\"\"\n",
+    "\n",
+    "    def __init__(self, head_size):\n",
+    "        super().__init__()\n",
+    "        self.key = nn.Linear(n_embd, head_size, bias=False)\n",
+    "        self.query = nn.Linear(n_embd, head_size, bias=False)\n",
+    "        self.value = nn.Linear(n_embd, head_size, bias=False)\n",
+    "        self.register_buffer('tril', torch.tril(torch.ones(block_size, block_size)))\n",
+    "\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        B, T, C = x.shape\n",
+    "        k = self.key(x)  # (B,T,C)\n",
+    "        q = self.query(x)  # (B,T,C)\n",
+    "        # compute attention scores (\"affinities\")\n",
+    "        wei = q @ k.transpose(-2, -1) * C ** -0.5  # (B, T, C) @ (B, C, T) -> (B, T, T)\n",
+    "        wei = wei.masked_fill(self.tril[:T, :T] == 0, float('-inf'))  # (B, T, T)\n",
+    "        wei = F.softmax(wei / Tempreture, dim=-1)  # (B, T, T)\n",
+    "        wei = self.dropout(wei)\n",
+    "        # perform the weighted aggregation of the values\n",
+    "        v = self.value(x)  # (B,T,C)\n",
+    "        out = wei @ v  # (B, T, T) @ (B, T, C) -> (B, T, C)\n",
+    "        return out"
+   ],
+   "id": "ad93f3d25ee36141"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": 16,
+   "source": [
+    "class MultiHeadAttention(nn.Module):\n",
+    "    \"\"\" multiple heads of self-attention in parallel \"\"\"\n",
+    "\n",
+    "    def __init__(self, num_heads, head_size):\n",
+    "        super().__init__()\n",
+    "        self.heads = nn.ModuleList([Head(head_size) for _ in range(num_heads)])\n",
+    "        self.proj = nn.Linear(n_embd, n_embd)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = torch.cat([h(x) for h in self.heads], dim=-1)\n",
+    "        out = self.dropout(self.proj(out))\n",
+    "        return out"
+   ],
+   "id": "f0360f9d483911ac"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": 17,
+   "source": [
+    "class FeedFoward(nn.Module):\n",
+    "    \"\"\" a simple linear layer followed by a non-linearity \"\"\"\n",
+    "\n",
+    "    def __init__(self, n_embd):\n",
+    "        super().__init__()\n",
+    "        self.net = nn.Sequential(\n",
+    "            nn.Linear(n_embd, 4 * n_embd),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(4 * n_embd, n_embd),\n",
+    "            nn.Dropout(dropout),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.net(x)"
+   ],
+   "id": "42253282f15f5b59"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": 18,
+   "source": [
+    "class Block(nn.Module):\n",
+    "    \"\"\" Transformer block: communication followed by computation \"\"\"\n",
+    "\n",
+    "    def __init__(self, n_embd, n_head):\n",
+    "        # n_embd: embedding dimension, n_head: the number of heads we'd like\n",
+    "        super().__init__()\n",
+    "        head_size = n_embd // n_head\n",
+    "        self.sa = MultiHeadAttention(n_head, head_size)\n",
+    "        self.ffwd = FeedFoward(n_embd)\n",
+    "        self.ln1 = nn.LayerNorm(n_embd)\n",
+    "        self.ln2 = nn.LayerNorm(n_embd)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = x + self.sa(self.ln1(x))\n",
+    "        x = x + self.ffwd(self.ln2(x))\n",
+    "        return x"
+   ],
+   "id": "b2c6c7cc062e94dd"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": 19,
+   "source": [
+    "# super simple bigram model\n",
+    "class BigramLanguageModel(nn.Module):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        # each token directly reads off the logits for the next token from a lookup table\n",
+    "        self.token_embedding_table = nn.Embedding(vocab_size, n_embd)\n",
+    "        self.position_embedding_table = nn.Embedding(block_size, n_embd)\n",
+    "        self.blocks = nn.Sequential(*[Block(n_embd, n_head=n_head) for _ in range(n_layer)])\n",
+    "        self.ln_f = nn.LayerNorm(n_embd)  # final layer norm\n",
+    "        self.lm_head = nn.Linear(n_embd, vocab_size)\n",
+    "\n",
+    "    def forward(self, idx, targets=None):\n",
+    "        B, T = idx.shape\n",
+    "\n",
+    "        # idx and targets are both (B,T) tensor of integers\n",
+    "        tok_emb = self.token_embedding_table(idx)  # (B,T,C)\n",
+    "        pos_emb = self.position_embedding_table(torch.arange(T, device=device))  # (T,C)\n",
+    "        x = tok_emb + pos_emb  # (B,T,C)\n",
+    "        x = self.blocks(x)  # (B,T,C)\n",
+    "        x = self.ln_f(x)  # (B,T,C)\n",
+    "        logits = self.lm_head(x)  # (B,T,vocab_size)\n",
+    "\n",
+    "        if targets is None:\n",
+    "            loss = None\n",
+    "        else:\n",
+    "            B, T, C = logits.shape\n",
+    "            logits = logits.view(B * T, C)\n",
+    "            targets = targets.view(B * T)\n",
+    "            loss = F.cross_entropy(logits, targets)\n",
+    "\n",
+    "        return logits, loss\n",
+    "\n",
+    "    def generate(self, idx, max_new_tokens):\n",
+    "        # idx is (B, T) array of indices in the current context\n",
+    "        for _ in range(max_new_tokens):\n",
+    "            # crop idx to the last block_size tokens\n",
+    "            idx_cond = idx[:, -block_size:]\n",
+    "            # get the predictions\n",
+    "            logits, loss = self(idx_cond)\n",
+    "            # focus only on the last time step\n",
+    "            logits = logits[:, -1, :]  # becomes (B, C)\n",
+    "            # apply softmax to get probabilities\n",
+    "            probs = F.softmax(logits, dim=-1)  # (B, C)\n",
+    "            # sample from the distribution\n",
+    "            idx_next = torch.multinomial(probs, num_samples=1)  # (B, 1)\n",
+    "            # append sampled index to the running sequence\n",
+    "            idx = torch.cat((idx, idx_next), dim=1)  # (B, T+1)\n",
+    "        return idx"
+   ],
+   "id": "321b28d6ca3bf2b8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[34m\u001B[1mwandb\u001B[0m: \u001B[33mWARNING\u001B[0m Calling wandb.login() after wandb.init() has no effect.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 44,
+   "source": "wandb.login(key=\"2b242cad61896bc77d8053286a9c3e79f01c9127\")",
+   "id": "417f3d61006898b2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.209729 M parameters\n"
+     ]
+    }
+   ],
+   "execution_count": 45,
+   "source": [
+    "wandb.init(\n",
+    "    project=\"LLM\",\n",
+    "    config={\n",
+    "        \"learning_rate\": learning_rate,\n",
+    "        \"architecture\": \"First Full Model\",\n",
+    "        \"dataset\": \"Shakespeare\",\n",
+    "    },\n",
+    "    name=\"First Full Model (Normal Encoding)\"\n",
+    ")\n",
+    "\n",
+    "model = BigramLanguageModel()\n",
+    "m = model.to(device)\n",
+    "\n",
+    "print(sum(p.numel() for p in m.parameters()) / 1e6, 'M parameters')"
+   ],
+   "id": "7a59642989e70cfc"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": 46,
+   "source": "optimizer = torch.optim.AdamW(model.parameters(), lr=learning_rate)",
+   "id": "842c35bdf7c9d219"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": 47,
+   "source": [
+    "# hyperparameters\n",
+    "batch_size = 16  # how many independent sequences will we process in parallel?\n",
+    "block_size = 32  # what is the maximum context length for predictions?\n",
+    "max_iters = 5000\n",
+    "eval_interval = 100\n",
+    "learning_rate = 1e-3\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "eval_iters = 200\n",
+    "n_embd = 64\n",
+    "n_head = 4\n",
+    "n_layer = 4\n",
+    "dropout = 0.0\n",
+    "tempreture = 1.0  # Tempreture in softmax\n",
+    "# ------------"
+   ],
+   "id": "41da6292b8f6bc75"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": 48,
+   "source": [
+    "wandb.log({\"Context Length\": block_size, \"Batch Size\": batch_size, \"Learning Rate\": learning_rate, \"Dropout\": dropout,\n",
+    "           \"Tempreture\": tempreture, \"Number of Heads\": n_head, \"Number of Layers\": n_layer, \"Embedding Size\": n_embd,\n",
+    "           \"Eval Iterations\": eval_iters, \"Eval Intervals\": eval_interval, \"Number of Iterations\": max_iters})\n"
+   ],
+   "id": "6a349ad581ea76d7"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 0: train loss 4.3139, val loss 4.3097\n",
+      "step 100: train loss 2.6329, val loss 2.6476\n",
+      "step 200: train loss 2.5032, val loss 2.5217\n",
+      "step 300: train loss 2.4124, val loss 2.4178\n",
+      "step 400: train loss 2.3461, val loss 2.3498\n",
+      "step 500: train loss 2.3009, val loss 2.3141\n",
+      "step 600: train loss 2.2415, val loss 2.2508\n",
+      "step 700: train loss 2.2011, val loss 2.2086\n",
+      "step 800: train loss 2.1572, val loss 2.1745\n",
+      "step 900: train loss 2.1175, val loss 2.1533\n",
+      "step 1000: train loss 2.0828, val loss 2.1311\n",
+      "step 1100: train loss 2.0557, val loss 2.1001\n",
+      "step 1200: train loss 2.0199, val loss 2.0709\n",
+      "step 1300: train loss 2.0049, val loss 2.0613\n",
+      "step 1400: train loss 1.9733, val loss 2.0570\n",
+      "step 1500: train loss 1.9467, val loss 2.0338\n",
+      "step 1600: train loss 1.9391, val loss 2.0320\n",
+      "step 1700: train loss 1.9186, val loss 2.0116\n",
+      "step 1800: train loss 1.9046, val loss 2.0019\n",
+      "step 1900: train loss 1.8887, val loss 2.0037\n",
+      "step 2000: train loss 1.8563, val loss 1.9713\n",
+      "step 2100: train loss 1.8533, val loss 1.9679\n",
+      "step 2200: train loss 1.8420, val loss 1.9636\n",
+      "step 2300: train loss 1.8277, val loss 1.9476\n",
+      "step 2400: train loss 1.8301, val loss 1.9358\n",
+      "step 2500: train loss 1.8008, val loss 1.9281\n",
+      "step 2600: train loss 1.7966, val loss 1.9197\n",
+      "step 2700: train loss 1.7919, val loss 1.9200\n",
+      "step 2800: train loss 1.7767, val loss 1.8981\n",
+      "step 2900: train loss 1.7682, val loss 1.9009\n",
+      "step 3000: train loss 1.7628, val loss 1.9001\n",
+      "step 3100: train loss 1.7440, val loss 1.8930\n",
+      "step 3200: train loss 1.7402, val loss 1.8770\n",
+      "step 3300: train loss 1.7359, val loss 1.8735\n",
+      "step 3400: train loss 1.7314, val loss 1.8708\n",
+      "step 3500: train loss 1.7222, val loss 1.8762\n",
+      "step 3600: train loss 1.7153, val loss 1.8728\n",
+      "step 3700: train loss 1.7120, val loss 1.8712\n",
+      "step 3800: train loss 1.7137, val loss 1.8701\n",
+      "step 3900: train loss 1.7050, val loss 1.8488\n",
+      "step 4000: train loss 1.7066, val loss 1.8435\n",
+      "step 4100: train loss 1.7032, val loss 1.8381\n",
+      "step 4200: train loss 1.6937, val loss 1.8440\n",
+      "step 4300: train loss 1.6899, val loss 1.8464\n",
+      "step 4400: train loss 1.6683, val loss 1.8300\n",
+      "step 4500: train loss 1.6682, val loss 1.8286\n",
+      "step 4600: train loss 1.6674, val loss 1.8021\n",
+      "step 4700: train loss 1.6499, val loss 1.8131\n",
+      "step 4800: train loss 1.6665, val loss 1.8091\n",
+      "step 4900: train loss 1.6583, val loss 1.7978\n",
+      "step 4999: train loss 1.6554, val loss 1.8182\n"
+     ]
+    }
+   ],
+   "execution_count": 49,
+   "source": [
+    "for iter in range(max_iters):\n",
+    "\n",
+    "    # every once in a while evaluate the loss on train and val sets\n",
+    "    if iter % eval_interval == 0 or iter == max_iters - 1:\n",
+    "        losses = estimate_loss()\n",
+    "        print(f\"step {iter}: train loss {losses['train']:.4f}, val loss {losses['val']:.4f}\")\n",
+    "        wandb.log({\"Iteration\": iter, \"Train Loss\": losses['train'], \"Val Loss\": losses['val']})\n",
+    "\n",
+    "    # sample a batch of data\n",
+    "    xb, yb = get_batch('train')\n",
+    "\n",
+    "    # evaluate the loss\n",
+    "    logits, loss = model(xb, yb)\n",
+    "    optimizer.zero_grad(set_to_none=True)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()"
+   ],
+   "id": "158048c95940f983"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "great me rack tower: if you give\n",
+      "Befewed the goods me theaking.\n",
+      "Second lialt thou. Carmessire! my streaders;\n",
+      "\n",
+      "KING RICIUS:\n",
+      "The, when: so lords; my seat may king!\n",
+      "\n",
+      "KING EKE OF GlES\n",
+      "\n",
+      "DATHARD IIA:\n",
+      "My came.\n",
+      "\n",
+      "ELY:\n",
+      "\n",
+      "LADY CAPIO:\n",
+      "So palsess, your confal noce; to being wine a mant-of is bear,\n",
+      "And bringbred, id me, at to gently?\n",
+      "\n",
+      "LEONTES:\n",
+      "Near I im knowits: Retbress mead.\n",
+      "\n",
+      "SICINIUS:\n",
+      "I live, and when, have you, names, do I know yield fight.'\n",
+      "Proke: a let I faint--befitt, Reagse rongbrees,\n",
+      "Tent ceensedings and no counnt, fatcouse and his theer\n",
+      "And whesesh will to your hightly: Politiong I behapowsat we a heards:\n",
+      "Harwfell! for sick you.\n",
+      "The marry'st redesings and featheds,\n",
+      "And you anboothing weopps? call could him the comforn how heirss;\n",
+      "So do unger's to York; good my mover boes,\n",
+      "Thei: going abjecaudience; you\n",
+      "wre competibument soun prot dinesity!\n",
+      "\n",
+      "CORIOLA:\n",
+      "Appilitss me!--low it made:\n",
+      "A deathth thee, ifforges, my paaint,\n",
+      "Where he can amernise. Dry own, who prin impation's chame,\n",
+      "To I farther leaven the dongbragge?\n",
+      "\n",
+      "SARLING:\n",
+      "Which wougalt my kishome, 'dy; where's dream too.\n",
+      "\n",
+      "DUKE Vencalling; and thy down: you not denepers.\n",
+      "In marry having, here it, who, a callied;\n",
+      "Yet 'tirrogiss a not poor and leady, all boes\n",
+      "Tides Erequess, Godest marry loves,\n",
+      "Not the deishs to bried by him, beest you face of that to\n",
+      "more falther uponal, in a songercented word o' it a shan king--\n",
+      "Then worsth'd usent livedness, I know they datisp-bum thought;\n",
+      "Aren I well. O your not hisbardame! Gauray, for his bend so kishousager;\n",
+      "Should were prenison, he kind thy.\n",
+      "'Till Rome, set thy briets, and poor friend be,\n",
+      "As your lover not is earough, frience.\n",
+      "\n",
+      "JULIET:\n",
+      "Night-wardher?\n",
+      "\n",
+      "TRANIO:\n",
+      "You bears.\n",
+      "\n",
+      "JOP\n",
+      "MENENIURD't:\n",
+      "I kin thou move thy reft in Camildy hither,\n",
+      "Not to the; seave my tongue a-fortunes their worms\n",
+      "gace hoon his patitage, if looks will incouul.\n",
+      "\n",
+      "BUMPE:\n",
+      "What I ham, woubject, myst Lendio.\n",
+      "\n",
+      "queant plivy:\n",
+      "I my you, I have kingsly brieght,\n",
+      "Gart grieft, a way hadringstle at it bysengedings this day.\n",
+      "\n",
+      "PRINCE HENRY\n"
+     ]
+    }
+   ],
+   "execution_count": 57,
+   "source": [
+    "# generate from the model\n",
+    "wandb.log({\"Device\": device})\n",
+    "context = torch.zeros((1, 1), dtype=torch.long, device=device)\n",
+    "print(normal_encoding.decode(m.generate(context, max_new_tokens=2000)[0].tolist()))\n",
+    "wandb.log({\"Generated Sequence\": normal_encoding.decode(m.generate(context, max_new_tokens=2000)[0].tolist())})\n",
+    "\n",
+    "wandb.finish()"
+   ],
+   "id": "b69358f3cf69282"
   }
  ],
  "metadata": {
