--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -7,9 +7,8 @@
     },
     "id": "f9a7e8aa1b3814ff",
     "outputId": "f79ba14f-d83b-4a7a-be6f-2af7780f9c8e",
-    "ExecuteTime": {
-     "end_time": "2024-12-16T14:17:01.359927Z",
-     "start_time": "2024-12-16T14:16:49.907398Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "cell_type": "code",
@@ -31,29 +30,8 @@
     "nltk.download('punkt_tab')"
    ],
    "id": "f9a7e8aa1b3814ff",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to /Users/aria/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt_tab to /Users/aria/nltk_data...\n",
-      "[nltk_data]   Package punkt_tab is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
