--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "code",
    "source": [
     "# # Login to Weights & Biases for experiment tracking\n",
-    "wandb.login(key=\"2b242cad61896bc77d8053286a9c3e79f01c9127\")"
+    "wandb.login()"
    ],
    "id": "bca6edd824b1b033",
    "outputs": [
